test/org/midica/testfiles/failing/zero-for-note-2.midica
INCLUDE inc/instruments.midica

0  c,d  pat

PATTERN pat
	{
		{
			0 -
		}
	}
END
